# reqx-rs

./: .justfile  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: transport.rs
examples/: README.md  advanced_time_controls.rs  basic_json.rs  blocking_basic.rs  blocking_streaming.rs  concurrency_limits.rs  custom_ca_mtls.rs  error_handling.rs  interceptor_redirect.rs  metrics_snapshot.rs  profile_and_observer.rs  proxy_and_no_proxy.rs  rate_limit_429.rs  request_helpers.rs  request_overrides.rs  resilience_controls.rs  resumable_upload.rs  retry_classifier.rs  streaming.rs  tls_backends.rs
src/: blocking_client.rs  body.rs  client.rs  error.rs  lib.rs  metrics.rs  policy.rs  proxy.rs  rate_limit.rs  request.rs  resilience.rs  response.rs  retry.rs  tests.rs  tls.rs  upload.rs  util.rs
src/async_client/: body.rs  client.rs  limiters.rs  mod.rs  request.rs
src/blocking_client/: builder.rs  execute.rs  limiters.rs  mod.rs  request.rs  transport.rs
src/core/: config.rs  content_encoding.rs  error.rs  execution.rs  extensions.rs  limiters.rs  metrics.rs  mod.rs  observe.rs  otel.rs  policy.rs  proxy.rs  request_builder.rs  retry.rs  util.rs
src/http/: response.rs
src/http/response/: async_stream.rs  blocking_stream.rs
tests/: integration_blocking.rs  integration_error_contract.rs  integration_http.rs  integration_resilience.rs  integration_tls_versions.rs
