[package]
name = "reqx"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Rust HTTP transport client for API SDK libraries with retry, timeout, idempotency, proxy, and pluggable TLS backends"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/reqx"
homepage = "https://github.com/lvillis/reqx-rs"
repository = "https://github.com/lvillis/reqx-rs"
categories = ["api-bindings", "network-programming", "web-programming::http-client"]
keywords = ["http", "sdk", "reqwest", "rustls", "native-tls"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "assets/**",
  "src/**",
  "benches/**",
  "examples/**",
  "tests/**"
]

[features]
default = ["tls-rustls-ring"]
tls-rustls-ring = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls/ring", "rustls/ring"]
tls-rustls-aws-lc-rs = [
    "dep:hyper-rustls",
    "dep:rustls",
    "hyper-rustls/aws-lc-rs",
    "rustls/aws_lc_rs",
]
tls-native = ["dep:hyper-tls", "hyper-tls/alpn"]

[dependencies]
# Async runtime and stream primitives.
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["io"] }
futures-core = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
bytes = { version = "1.11.1", default-features = false, features = ["std"] }

# HTTP stack.
http = { version = "1.4.0", default-features = false, features = ["std"] }
http-body-util = { version = "0.1.3", default-features = false }
httpdate = { version = "1.0.3", default-features = false }
hyper = { version = "1.8.1", default-features = false, features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["client", "client-legacy", "client-proxy", "http1", "http2", "tokio"] }
tower-service = { version = "0.3.3", default-features = false }
url = { version = "2.5.8", default-features = false, features = ["std"] }

# TLS backends (feature-gated).
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "webpki-tokio"], optional = true }
rustls = { version = "0.23.36", default-features = false, features = ["std"], optional = true }
hyper-tls = { version = "0.6.0", default-features = false, optional = true }

# Serialization helpers.
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
serde_urlencoded = { version = "0.7.1", default-features = false }

# Content-encoding codecs.
brotli = { version = "8.0.2", default-features = false, features = ["std"] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
zstd = { version = "0.13.3" }

# Error handling, backoff jitter, and telemetry.
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
rand = { version = "0.10.0", default-features = false, features = ["std", "thread_rng"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "std"] }

[dev-dependencies]
# Benchmark framework.
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name = "transport"
harness = false

[package.metadata.release]
push = true
publish = false
verify = true
sign-commit = true
sign-tag = true
allow-branch = ["main"]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
